--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -5,7 +5,7 @@ name: final 11 sprint
 on: 
   push: 
     branches: [ "main" ]
-    tags: '1.2.3'
+    tags: '*'
 jobs:
   test:
     runs-on: ubuntu-latest
